Fixed reviews overflow

--- a/client/src/sections/about/About.sass
+++ b/client/src/sections/about/About.sass
@@ -58,6 +58,8 @@
 
     // Layout
     min-height: 200px
+    max-width: 100vw
+    overflow-x: hidden !important
 
     // Misc Styling
     color: #1a202c
@@ -72,6 +74,8 @@
         justify-content: center
         height: auto
         width: 100%
+        @media screen and (max-width: 650px)
+            width: 100vw
     .slick-slide
         cursor: grab
         z-index: 1
